--- a/src/html-blocks/pages--external/footer--external.html
+++ b/src/html-blocks/pages--external/footer--external.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="iflex">
         <div class="logo desktop-only"><div class="svg-sprite--logo_blue"></div></div>
-        <div class="main-site"><a href="/">Перейти на основной <br>
+        <div class="main-site"><a href="/" class="blue underline">Перейти на основной <br>
             сайт клиники</a></div>
         <div class="socials">
             <a href=""><div class="svg-sprite--vk_pink"></div></a>
@@ -11,7 +11,7 @@
 
         <div class="copyrights">
             <div class="copy">© 2016 ООО «Клиника Одинцова» </div>
-            <div class="dev"><a href="mbrooks.ru">Сайт разработан Mr.Brooks</a></div>
+            <div class="dev"><a href="mbrooks.ru" class="underline">Сайт разработан Mr.Brooks</a></div>
         </div>
     </div>
 </footer>
