--- a/html-blocks/pages--external/kit-long-read-block.html
+++ b/html-blocks/pages--external/kit-long-read-block.html
@@ -11,7 +11,7 @@
     </div>
     <div id="myth-menu-open" class="fade-in myth-menu-btn myth-menu-btn--open popup-open" data-target="#myth-menu">
       <span>Все мифы</span>
-      <div class="bars">
+      <div class="bars shake">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
@@ -20,7 +20,7 @@
   </div>
   <div class="start-banner">
     <div>
-      <img src="http://placehold.it/1366x600" alt="">
+      <img data-src-desktop="http://placehold.it/1366x600" data-src-mobile="http://placehold.it/768x400" alt="">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 pocket-up">
           <h1 class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
@@ -79,14 +79,16 @@
   </div>
   <div class="long-read-block share-block ">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1 pocket-up">
-        <div class="quote">Поделитесь этой статьёй с друзьями – <br>вместе мы развеем мифы</div>
-        <div class="share-btns">
-          <a href=""><div class="svg-sprite--vk_share"></div></a>
-          <a href=""><div class="svg-sprite--fb_share"></div></a>
-          <a href=""><div class="svg-sprite--twitter_share"></div></a>
-          <a href=""><div class="svg-sprite--ok_share"></div></a>
-          <a href=""><div class="svg-sprite--google_share"></div></a>
+      <div class="col-md-10 col-md-offset-1">
+        <div class="quote  pocket-up">
+          <div>Поделитесь этой статьёй с друзьями – <br>вместе мы развеем мифы</div>
+        </div>
+        <div class="share-btns  ">
+          <a href=""><div class="svg-sprite--vk_share fade-in"></div></a>
+          <a href=""><div class="svg-sprite--fb_share fade-in"></div></a>
+          <a href=""><div class="svg-sprite--twitter_share fade-in"></div></a>
+          <a href=""><div class="svg-sprite--ok_share fade-in" ></div></a>
+          <a href=""><div class="svg-sprite--google_share fade-in"></div></a>
         </div>
       </div>
     </div>
@@ -96,7 +98,7 @@
       <div class="col-md-3 col-md-offset-1 to-terms desktop-only pocket-up">
         <p>На сайте есть мини-словарь с полезными терминами, которые пригодятся вам в общении с врачом.
         </p>
-        <a href="terms.html">Словарь терминов</a>
+        <a href="terms.html" class="underline">Словарь терминов</a>
       </div>
       <div class="col-md-4 pocket-up">
         <h2>Задать вопрос ДОКТОРУ ОДИНЦОВУ</h2>
@@ -160,57 +162,56 @@
   <hr class="hr-footer">
 </section>
 <div id="myth-menu" class="myth-menu">
-    <div id="myth-menu-close" class="myth-menu-btn myth-menu-btn--close active popup-close">
-      <span>Все мифы</span>
-      <div class="bars">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+  <div id="myth-menu-close" class="myth-menu-btn myth-menu-btn--close active popup-close">
+    <span>Все мифы</span>
+    <div class="bars">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+  </div>
+  <h2>12 мифов о женской груди</h2>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="link">
+        <a href="">Миф №1:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №2:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №3:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №4:</a>
       </div>
     </div>
-    <h2>12 мифов о женской груди</h2>
-    <div class="row">
-      <div class="col-md-3">
-        <div class="link">
-          <a href="">Миф №1:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №2:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №3:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №4:</a>
-        </div>
+    <div class="col-md-3 col-md-offset-1">
+      <div class="link">
+        <a href="">Миф №5:</a>
       </div>
-      <div class="col-md-3 col-md-offset-1">
-        <div class="link">
-          <a href="">Миф №5:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №6:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №7:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №8:</a>
-        </div>
+      <div class="link">
+        <a href="">Миф №6:</a>
       </div>
-      <div class="col-md-3 col-md-offset-1">
-        <div class="link">
-          <a href="">Миф №9:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №10:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №11:</a>
-        </div>
-        <div class="link">
-          <a href="">Миф №12:</a>
-        </div>
+      <div class="link">
+        <a href="">Миф №7:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №8:</a>
+      </div>
+    </div>
+    <div class="col-md-3 col-md-offset-1">
+      <div class="link">
+        <a href="">Миф №9:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №10:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №11:</a>
+      </div>
+      <div class="link">
+        <a href="">Миф №12:</a>
       </div>
     </div>
   </div>
