--- a/html-blocks/pages--external/main-block.html
+++ b/html-blocks/pages--external/main-block.html
@@ -26,7 +26,7 @@
         <div  class="descr">
           <div id="change-text" class="pocket-up">
             <div>
-              За последние 100 лет под влиянием массовой культуры размер женской груди увеличился втрое, а рак груди помолодел на десятки лет.
+              За последние 100 лет под влиянием массовой культуры размер женской груди увеличился втрое,<br>а рак груди помолодел на десятки лет.
             </div>
           </div>
         </div>
@@ -45,108 +45,144 @@
         <div class="myth-grid">
           <div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="kit-long-read.html" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
-            </div>
-            <div class="myth-card">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
             <div class="myth-card fade-in">
-              <div class="number">Миф №1</div>
-              <div class="title">«От рака груди умирают быстро»</div>
-              <div class="more">
-                <span><a href="kit-long-read.html">Реальность</a></span>
-                <span class="icon"><div class="svg-sprite--back"></div></span>
-              </div>
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
+            </div>
+            <div class="myth-card fade-in">
+              <a href="" class="block">
+                <div class="number">Миф №1</div>
+                <div class="title">«От рака груди умирают быстро»</div>
+                <div class="more">
+                  <span>Реальность</span>
+                  <span class="icon"><div class="svg-sprite--back"></div></span>
+                </div>
+                <div class="background"></div>
+              </a>
             </div>
           </div>
         </div>
         <div class="banner-block">
           <div class="row">
-            <div class="col-md-6 col-md-offset-3 pocket-up">
-              <h2>Если у вас есть вопросы или нужна консультация врача – запишитесь на приём</h2>
-              <button class="btn btn--pink popup-open" data-target="#book-popup">Записаться на приём</button>
+            <div class="col-md-6 col-md-offset-3">
+              <div class="pocket-up"><h2>Если у вас есть вопросы или нужна консультация врача – запишитесь на приём</h2></div>
+              <button class="btn btn--pink fade-in popup-open" data-target="#book-popup">Записаться на приём</button>
             </div>
           </div>
         </div>
