--- a/html-blocks/pages--external/terms-block.html
+++ b/html-blocks/pages--external/terms-block.html
@@ -11,7 +11,7 @@
       Термины
     </div>
     <div class="book desktop-only">
-      <button class="btn btn--pink ">ЗАПИСАТЬСЯ НА ПРИЁМ</button>
+      <button class="btn btn--pink popup-open" data-target="#book-popup">ЗАПИСАТЬСЯ НА ПРИЁМ</button>
     </div>
   </div>
   <div class="container">
