--- a/src/html-blocks/common/head.html
+++ b/src/html-blocks/common/head.html
@@ -69,6 +69,46 @@
     <link rel="stylesheet" href="css/style.min.css" />
     <!-- PRELOADER STYLE -->
     <style>
-        
+        @-webkit-keyframes pulse {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+        @keyframes pulse {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+        #preloader {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: #d8385f;
+            z-index: 9999;
+            -webkit-transition: all 500ms;
+            transition: all 500ms;
+        }
+        #preloader.loaded {
+            -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+        }
+        #preloader .logo {
+            position: fixed;
+            margin: auto;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            -webkit-animation: pulse 1200ms infinite alternate;
+            animation: pulse 1200ms infinite alternate;
+        }
     </style>
 </head>
