--- a/src/html-blocks/pages--external/footer--external.html
+++ b/src/html-blocks/pages--external/footer--external.html
@@ -32,6 +32,11 @@
                 <button type="submit" class="btn btn--pink">Записаться</button>
             </form>
         </div>
+        <div id="succsess-message">
+            <div class="popup-title">Готово</div>
+            <p>Запись создана. С вами свяжется администратор и назначит удобную для вас дату приёма.</p>
+            <button class="btn btn--pink popup-close">ЗАКРЫТЬ ОКНО</button>
+        </div>
     </div>
 </div>
 
