--- a/src/html-blocks/common/head.html
+++ b/src/html-blocks/common/head.html
@@ -101,7 +101,7 @@
             transform: translate3d(100%, 0, 0);
         }
         #preloader .logo {
-            position: fixed;
+            position: absolute;
             margin: auto;
             top: 0;
             bottom: 0;
