--- a/src/html-blocks/pages--external/footer--external.html
+++ b/src/html-blocks/pages--external/footer--external.html
@@ -32,7 +32,8 @@
                 <button type="submit" class="btn btn--pink">Записаться</button>
             </form>
         </div>
-        <div id="succsess-message">
+        <div id="succsess-message" class="content">
+            <div class="svg-sprite--done"></div>
             <div class="popup-title">Готово</div>
             <p>Запись создана. С вами свяжется администратор и назначит удобную для вас дату приёма.</p>
             <button class="btn btn--pink popup-close">ЗАКРЫТЬ ОКНО</button>
